refactor auth, forum, common modules code